Remove TryLoadConstantExpression() function
Also the InfiniteLoop check was removed from AST Verifier because:
  - it couldn't catch all the cases even previously and now it can process only the trivial cases
  - it is incorrect check case because we shouldn't prohibit programmer to use infinite loops in his code if he wants to

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IAVS5D

Tests: run Test-U-Runner and CI

Signed-off-by: Zelentsov Dmitry <zelentsov.dmitry@huawei-partners.com>

--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -63,7 +63,7 @@ options:
   type: bool
   default: false
   description: Dump AST with synthetic nodes for dynamic languages
-  
+
 - name: dump-ast-only-silent
   type: bool
   default: false
@@ -73,7 +73,7 @@ options:
   type: bool
   default: false
   description: Print names of files that are part of compilation
-   
+
 # Compiler
 - name: dump-assembly
   type: bool
@@ -233,7 +233,6 @@ options:
     - ReferenceTypeAnnotationIsNull
     - ArithmeticOperationValid
     - SequenceExpressionHasLastType
-    - CheckInfiniteLoop
     - ForLoopCorrectlyInitialized
     - VariableHasEnclosingScope
     - ModifierAccessValid
@@ -247,7 +246,7 @@ options:
   - name: warnings
     type: arg_list_t
     description: Print warnings and continue compilation even if AST tree is incorrect.
-    default: [ CheckInfiniteLoop ]
+    default: [ ]
     possible_values: *VerifierInvariants
     delimiter: ':'
   - name: errors
@@ -257,7 +256,6 @@ options:
     - ArithmeticOperationValid
     - CheckAbstractMethod
     # - CheckConstProperties
-    # - CheckInfiniteLoop
     # - CheckScopeDeclaration
     - CheckStructDeclaration
     - EveryChildHasValidParent
