Add Expression CAPI test cases
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBTFN7

Reason:
    Build CAPI protection

Description:
    Add Expression CAPI test cases aimed to build CAPI protection

Signed-off-by: tianlongdev <tianlong18@h-partners.com>

--- a/ets2panda/test/unit/plugin_ut/CMakeLists.txt
+++ b/ets2panda/test/unit/plugin_ut/CMakeLists.txt
@@ -32,6 +32,8 @@ set(COMMON_SOURCE_FILES
 set(PLUGIN_UT_TESTS
     #"test_name test_sts_file how_to_test_mode plugin_file_extension(c|cpp) how_to_compile_mode"
     "plugin_ut_variables_api compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
+    "plugin_ut_new_array_instance_expression_api compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
+    "plugin_ut_binary_expression_api compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
 )
 
 set(RUNTIME_ARGUMENTS
