--- a/ets2panda/bindings/package.json
+++ b/ets2panda/bindings/package.json
@@ -6,7 +6,8 @@
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.0.0",
     "rimraf": "^6.0.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "node-api-headers": "^1.4.0"
   },
   "main": "dist/index.js",
   "scripts": {
