Implement spec3.19.3 keyof types
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBVCPQ

Description:
Need to implement the keyof keyword of spec3.19.3, A special form of union types are keyof types built by using the keyword keyof.The keyword keyof is applied to the class or interface type.

Tested-by:
ninja tests (passed)
ets_testrunner (passed)

Signed-off-by: zengzengran <zengran2@huawei.com>#

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -284,6 +284,7 @@ libes2panda_sources = [
   "ir/ets/etsClassLiteral.cpp",
   "ir/ets/etsFunctionType.cpp",
   "ir/ets/etsImportSource.cpp",
+  "ir/ets/etsKeyofType.cpp",
   "ir/ets/etsLaunchExpression.cpp",
   "ir/ets/etsModule.cpp",
   "ir/ets/etsNeverType.cpp",
@@ -579,6 +580,7 @@ HEADERS_TO_BE_PARSED = [
   "checker/types/ets/etsBigIntType.h",
   "ir/expressions/arrayExpression.h",
   "ir/ets/etsUnionType.h",
+  "ir/ets/etsKeyofType.h",
   "ir/ts/tsTypeParameter.h",
   "ir/ts/tsConstructorType.h",
   "ir/ts/tsTypeParameterDeclaration.h",
@@ -815,6 +817,7 @@ ES2PANDA_API_GENERATED = [
   "$LIBGEN_DIR/gen/headers/ir/ts/tsObjectKeyword.yaml",
   "$LIBGEN_DIR/gen/headers/checker/types/ts/unionType.yaml",
   "$LIBGEN_DIR/gen/headers/ir/ets/etsUnionType.yaml",
+  "$LIBGEN_DIR/gen/headers/ir/ets/etsKeyofType.yaml",
   "$LIBGEN_DIR/gen/headers/ir/base/tsPropertySignature.yaml",
   "$LIBGEN_DIR/gen/headers/checker/types/ts/objectDescriptor.yaml",
   "$LIBGEN_DIR/gen/headers/ir/ts/tsConditionalType.yaml",
