--- a/ets2panda/bindings/package.json
+++ b/ets2panda/bindings/package.json
@@ -17,5 +17,8 @@
     "run": "npm run clean && npm run compile"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "json5": "^2.2.3"
+  }
 }
