Export CreateETSStringLiteral C API
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBVXZV

Description：Export CreateETSStringLiteral C API

Signed-off-by: Ocean <yangyang623@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -570,6 +570,7 @@ HEADERS_TO_BE_PARSED = [
   "ir/typed.h",
   "ir/statements/ifStatement.h",
   "ir/ets/etsTuple.h",
+  "ir/ets/etsStringLiteralType.h",
   "ir/module/exportSpecifier.h",
   "ir/ts/tsNamedTupleMember.h",
   "ir/statements/returnStatement.h",
@@ -846,6 +847,7 @@ ES2PANDA_API_GENERATED = [
   "$LIBGEN_DIR/gen/headers/ir/ts/tsUndefinedKeyword.yaml",
   "$LIBGEN_DIR/gen/headers/checker/types/signature.yaml",
   "$LIBGEN_DIR/gen/headers/ir/ets/etsTuple.yaml",
+  "$LIBGEN_DIR/gen/headers/ir/ets/etsStringLiteralType.yaml",
   "$LIBGEN_DIR/gen/headers/util/language.yaml",
   "$LIBGEN_DIR/gen/headers/ir/statements/tryStatement.yaml",
   "$LIBGEN_DIR/gen/headers/checker/types/ets/etsBigIntType.yaml",
