Support Export Table in ets_frontend
Issue: https://gitee.com/openharmony/arkcompiler_runtime_core/issues/IBWUEO

Description: Support Export Table in ets_frontend

Signed-off-by: xuxinjie4 <xuxinjie4@huawei.com>

--- a/ets2panda/test/unit/plugin/CMakeLists.txt
+++ b/ets2panda/test/unit/plugin/CMakeLists.txt
@@ -92,6 +92,7 @@ set(PLUGIN_TESTS
     "plugin_proceed_to_state_create_interface_declaration compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_create_import compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_set_from_struct_modifier compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
+    "use_plugin_to_test_export_table compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
 )
 
 set(RUNTIME_ARGUMENTS
@@ -114,10 +115,20 @@ foreach(TEST_DATA IN ITEMS ${PLUGIN_TESTS})
         panda_add_sanitizers(TARGET ${TEST_NAME} SANITIZERS ${PANDA_SANITIZERS_LIST})
     endif()
     panda_target_include_directories(${TEST_NAME}
-        PRIVATE "${ES2PANDA_PATH}"
+        PRIVATE ${ES2PANDA_PATH}
+        PRIVATE ${PANDA_ROOT}/libpandafile
+        PRIVATE ${PANDA_ROOT}/assembler
         PRIVATE ${OUTPUT_DIR}
+        PUBLIC ${CMAKE_CURRENT_BINARY_DIR}
+        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
+        PUBLIC ${CMAKE_SOURCE_DIR}/libpandabase
+        PUBLIC ${CMAKE_SOURCE_DIR}/runtime
+        PUBLIC ${CMAKE_BINARY_DIR}/libpandabase
+        PUBLIC ${CMAKE_BINARY_DIR}/libpandafile/include
+        PUBLIC ${CMAKE_BINARY_DIR}/abc2program
+        ${CMAKE_BINARY_DIR}
     )
-    panda_target_link_libraries(${TEST_NAME} es2panda-public)
+    panda_target_link_libraries(${TEST_NAME} es2panda-public arkassembler arkbase arkfile abc2program)
 endforeach()
 
 add_custom_target(es2panda-plugin-test)
