--- a/ets2panda/bindings/BUILD.gn
+++ b/ets2panda/bindings/BUILD.gn
@@ -46,9 +46,9 @@ shared_library("ts_bindings") {
   ]
 
   include_dirs = [
-    "./node_modules/node-api-headers/include",
     "./native/include",
     "../public/",
+    "//third_party/node/src",
     rebase_path("$root_gen_dir/arkcompiler/ets_frontend/ets2panda/"),
   ]
 
