Report warning for unused typeparam
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBQF4Z
Signed-off-by: ekkoruse <zhangqingchun2@huawei.com>
Change-Id: I6dd8c9256d3171387e2076baecf0bad8068b75e4

--- a/ets2panda/util/diagnostic/warning.yaml
+++ b/ets2panda/util/diagnostic/warning.yaml
@@ -43,3 +43,7 @@ warning:
 - name : IMPLICIT_UNBOXING_TO
   id: 8
   message: "Implicit Unboxing to {}{}."
+
+- name : ANNOTATION_UNUSED_GENERIC_ALIAS_WARN
+  id: 9
+  message: "Type alias generic parameter '{}' is not used in type annotation"
