Native getter setters
Description: CTE issue on native getter setters is now fixed
Issue: #IBV9BC
Signed-off-by: sefayilmazunal <sefa.yilmaz.unal@huawei.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -438,7 +438,7 @@ syntax:
 
 - name: MODIFIERS_OF_GET_SET_LIMITED
   id: 107
-  message: "Modifiers of getter and setter are limited to ('abstract', 'static', 'final', 'override')."
+  message: "Modifiers of getter and setter are limited to ('abstract', 'static', 'final', 'override', 'native')."
 
 - name: ESCAPE_SEQUENCES_IN_AS
   id: 108
