[LSP]: add testing framework for bindings
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBYH20

Signed-off-by: liushitong <liushitong@huawei.com>

--- a/ets2panda/bindings/BUILD.gn
+++ b/ets2panda/bindings/BUILD.gn
@@ -75,6 +75,7 @@ shared_library("ts_bindings") {
   }
 
   if (is_linux) {
+    libs = [ "stdc++fs" ]
     cflags_cc = [
       "-std=c++17",
       "-Wall",
