Add mandatory CTE for uninitialized class field
Change Warning to CTE

Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBYNJV

Signed-off-by: lijincheng <lijincheng13@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1346,3 +1346,7 @@ semantic:
 - name: READONLY_PROPERTY_REASSIGN
   id: 338
   message: "The 'Readonly' property cannot be reassigned."
+
+- name: PROPERTY_MAYBE_MISSING_INIT
+  id: 339
+  message: "Property '{}' might not have been initialized."
