Fix for predefined types
Predefined types cannot be used as valid identifiers
Issue: #IBYOA4
Fixes 22987 internal issue

Change-Id: I3c0511358dc6dbbbb1ca3c2989ea661915da4c63
Signed-off-by: Robert Sipka <robert.sipka@h-lab.eu>

--- a/ets2panda/lexer/scripts/tokens.yaml
+++ b/ets2panda/lexer/scripts/tokens.yaml
@@ -247,3 +247,4 @@ flags:
   unary: Unary operation
   reserved_type_name: TypeScript reserved type name
   definable_type_name: Words which cannot be used as user-defined type names but are not otherwise restricted
+  predefined_type: Predefined types which are hard keywords, and cannot be used as identifiers
