--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -45,6 +45,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/cancellation_token.cpp",
     "src/classifier.cpp",
     "src/completions.cpp",
+    "src/create_type_help_items.cpp",
     "src/find_references.cpp",
     "src/find_rename_locations.cpp",
     "src/get_adjusted_location.cpp",
