--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -30,6 +30,7 @@ set(ES2PANDA_LSP_SRC
   ./src/services/utilities.cpp
   ./src/line_column_offset.cpp
   ./src/inlay_hints.cpp
+  ./src/create_type_help_items.cpp
 )
 
 panda_add_library(${LSP_LIB} SHARED ${ES2PANDA_LSP_SRC})
