Fix for avoiding repeated compiling
Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBU2J9

Signed-off-by: Sergey V. Ignatov <ignatov.sergey@huawei-partners.com>

--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -364,3 +364,8 @@ options:
   type: arg_list_t
   default: []
   description: Bytecode optimizer's compiler arguments
+
+- name: perm-arena
+  type: bool
+  default: true
+  description: Place AST trees in permanent arena
