Implement the Type.from feature
Issue:
  https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBZ3UA
Description:
  The ArkTS standard library provides a pseudo generic static method Type.from<T>() to be processed by the compiler in a specific way during compilation. A call to this method allows getting a variable of type
Type that represents type T at runtime. Type T can be any valid type.

Tests: all test passed

Signed-off-by:menjiaheng <menjiaheng@h-partners.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -242,6 +242,7 @@ libes2panda_sources = [
   "compiler/lowering/ets/topLevelStmts/globalDeclTransformer.cpp",
   "compiler/lowering/ets/topLevelStmts/importExportDecls.cpp",
   "compiler/lowering/ets/topLevelStmts/topLevelStmts.cpp",
+  "compiler/lowering/ets/typeFromLowering.cpp",
   "compiler/lowering/ets/unionLowering.cpp",
   "compiler/lowering/phase.cpp",
   "compiler/lowering/plugin_phase.cpp",
