Avoid segmentation fault in declgen_ets2ts
Issue: https://gitee.com/openharmony/arkcompiler_runtime_core/issues/IC1FGY

Signed-off-by: dongchao <dongchao46@huawei.com>
Change-Id: I5528d724c507986dc8966d9e1e1e48035a05dccf

--- a/ets2panda/declgen_ets2ts/declgen_ets2ts_error.yaml
+++ b/ets2panda/declgen_ets2ts/declgen_ets2ts_error.yaml
@@ -48,3 +48,6 @@ declgen_ets2ts_error:
   id: 9
   message: Imports with local bindings are not supported.
 
+- name: UNSUPPORTED_ENCODING_SPECIFICATIONS
+  id: 10
+  message: The source file does not comply with the encoding specifications. For details, please see the following error information.
