Compiler diagnostic improvement:
Change error messages

Changed several error messages to describe the errors better
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC0FD6
Internal issue: #24540

Change-Id: I7e248dc6df458fe70a12c3989ebe1a2013c67604
Signed-off-by: Istvan Romai <istvan.romai@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1157,7 +1157,7 @@ semantic:
 
 - name: NO_PARAMLESS_CTOR
   id: 291
-  message: "type {} has no parameterless constructor"
+  message: "Type {} has no parameterless constructor. Initialization with literals is not supported if the type has no parameterless constructor. Declare the parameterless constructor explicitly or remove parametered constructors!"
 
 - name: EXPR_NONCONSTRUCTIBLE
   id: 292
@@ -1350,3 +1350,19 @@ semantic:
 - name: ILLEGAL_NON_NULLISH_TYPE
   id: 339
   message: "Only type parameters can be used as a nonnullish type"
+
+- name: ERROR_ARKTS_NO_LITERAL_INITIALIZATION_WITHOUT_PARAMETERLESS_CONSTRUCTOR
+  id: 340
+  message: "Initialization with literals is not supported if the type has no parameterless constructor. Declare the parameterless constructor explicitly or remove parametered constructors!"
+
+- name: ERROR_ARKTS_NO_DECLARATION_MERGING
+  id: 341
+  message: "Merging declarations is not supported, please keep all definitions of classes, interfaces and enums compact in the codebase!"
+
+- name: ERROR_ARKTS_NO_ENUM_MIXED_TYPES
+  id: 342
+  message: "Enumeration members can be initialized only by compile-time expressions and initializers must be of the same type."
+  
+- name: ERROR_ARKTS_NO_PROPERTIES_BY_INDEX
+  id: 343
+  message: "Indexed signatures are not allowed. Use arrays instead!"
