--- a/ets2panda/linter/tsconfig.json
+++ b/ets2panda/linter/tsconfig.json
@@ -9,7 +9,8 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "outDir": "build",
-    "strict": true
+    "strict": true,
+    "resolveJsonModule": true
   },
 
   "include": ["src/**/*"]
